temp/034ofwuinput.txt
  File "C:\Users\hp\Desktop\codemirror\temp\yt3ofrf.py", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
